--- a/app.json
+++ b/app.json
@@ -1,9 +1,9 @@
 {
-    "name": "🇧𝐠𝐭𝐗🇲𝐮𝐬𝐢𝐜🇧𝐨𝐭",
-    "logo": "https://te.legra.ph/file/99d0261f0aa5512ad6753.jpg",
+    "name": "γουя գυєєи ϐϐγ",
+    "logo": "https://graph.org/file/ece21f21f0a7f34d7bcb9.jpg",
     "description": "🥀 𝐀𝐧 𝐀𝐝𝐯𝐚𝐧𝐜𝐞𝐝 𝐏𝐨𝐰𝐞𝐫𝐟𝐮𝐥𝐥 𝐚𝐧𝐝 𝐒𝐮𝐩𝐞𝐫𝐟𝐚𝐬𝐭 𝐌𝐮𝐬𝐢𝐜 𝐏𝐥𝐚𝐲𝐞𝐫 𝐅𝐨𝐫 𝐓𝐞𝐥𝐞𝐠𝐫𝐚𝐦 𝐆𝐫𝐨𝐮𝐩 𝐕𝐂 ✨",
-    "keywords": ["bgtxmusicbot", "voice chat", "telegram"],
-    "repository": "https://github.com/BikashhalderNew/BGTMUSICBOT2",
+    "keywords": ["RABTAROBOT", "voice chat", "telegram"],
+    "repository": "https://github.com/CuteBacchaXD/QUEENMUSICBOT",
     "stack": "container",
     "env": {
         "API_HASH": {
@@ -17,7 +17,7 @@
         "ASSISTANT_NAME": {
             "description": "𝒀𝒐𝒖𝒓 𝑴𝒖𝒔𝒊𝒄 𝑨𝒔𝒔𝒊𝒔𝒕𝒂𝒏𝒕 𝑵𝒂𝒎𝒆",
             "required": true,
-            "value": "🇧𝐆𝐓 🇵𝐋𝐀𝐘𝐄𝐑"
+            "value": "γουя գυєєи ϐϐγ"
         },
         "ASSISTANT_USERNAME": {
             "description": "𝒀𝒐𝒖𝒓 𝑴𝒖𝒔𝒊𝒄 𝑨𝒔𝒔𝒊𝒔𝒕𝒂𝒏𝒕 𝑼𝒔𝒆𝒓𝒏𝒂𝒎𝒆 (𝑾𝒊𝒕𝒉𝒐𝒖𝒕 '@')",
@@ -27,12 +27,12 @@
         "BOT_IMAGE": {
             "description": "𝑰𝒎𝒂𝒈𝒆 𝑻𝒉𝒖𝒎𝒃𝒏𝒂𝒊𝒍 𝑳𝒊𝒏𝒌 𝑶𝒇 𝒀𝒐𝒖𝒓 𝑴𝒖𝒔𝒊𝒄 𝑩𝒐𝒕",
             "required": true,
-            "value": "https://te.legra.ph/file/99d0261f0aa5512ad6753.jpg"
+            "value": "https://graph.org/file/a8504a33f2a20b63f8adf.jpg"
         },
         "BOT_NAME": {
             "description": "𝒀𝒐𝒖𝒓 𝑴𝒖𝒔𝒊𝒄 𝑩𝒐𝒕 𝑵𝒂𝒎𝒆",
             "required": true,
-            "value": "🇧𝐆𝐓 🇲𝐔𝐒𝐈𝐂"
+            "value": "queen bby"
         },
         "BOT_TOKEN": {
             "description": "𝑮𝒆𝒕 𝑩𝒐𝒕 𝑻𝒐𝒌𝒆𝒏 𝑶𝒇 𝒀𝒐𝒖𝒓 𝑴𝒖𝒔𝒊𝒄 𝑩𝒐𝒕 𝑭𝒓𝒐𝒎 𝑩𝒐𝒕𝑭𝒂𝒕𝒉𝒆𝒓",
@@ -41,7 +41,7 @@
         "BOT_USERNAME": {
             "description": "𝒀𝒐𝒖𝒓 𝑴𝒖𝒔𝒊𝒄 𝑩𝒐𝒕 𝑼𝒔𝒆𝒓𝒏𝒂𝒎𝒆 (𝑾𝒊𝒕𝒉𝒐𝒖𝒕 '@')",
             "required": true,
-            "value": "adibikashbot"
+            "value": "RABTAROBOT"
         },
         "DURATION_LIMIT": {
             "description": "𝑺𝒆𝒕 𝑴𝒂𝒙𝒊𝒎𝒖𝒎 𝑴𝒖𝒔𝒊𝒄 𝑫𝒖𝒓𝒂𝒕𝒊𝒐𝒏 𝑳𝒊𝒎𝒊𝒕 (𝑴𝒊𝒏𝒖𝒕𝒆𝒔) 𝒀𝒐𝒖 𝑾𝒂𝒏𝒕",
@@ -51,17 +51,17 @@
         "OWNER_NAME": {
             "description": "𝑵𝒂𝒎𝒆 𝑶𝒇 𝑴𝒖𝒔𝒊𝒄 𝑩𝒐𝒕 𝑶𝒘𝒏𝒆𝒓",
             "required": true,
-            "value": "🇧𝐈𝐊𝐀𝐒𝐇 🇭𝐀𝐋𝐃𝐄𝐑"
+            "value": "cute baccha "
         },
         "OWNER_USERNAME": {
             "description": "𝑼𝒔𝒆𝒓𝒏𝒂𝒎𝒆 𝑶𝒇 𝑴𝒖𝒔𝒊𝒄 𝑩𝒐𝒕 𝑶𝒘𝒏𝒆𝒓",
             "required": true,
-            "value": "BikashHalder"
+            "value": "I_LOVE_YOU_MY_HEARTBEET"
         },
         "SOURCE_CODE": {
             "description": "𝑴𝒖𝒔𝒊𝒄 𝑩𝒐𝒕 𝑹𝒆𝒑𝒐𝒔𝒊𝒕𝒐𝒓𝒚 𝑳𝒊𝒏𝒌 𝑭𝒐𝒓 𝑭𝒖𝒕𝒖𝒓𝒆 𝑼𝒑𝒅𝒂𝒕𝒆𝒔",
             "required": true,
-            "value": "https://github.com/BikashhalderNew/BGTMUSICBOT2"
+            "value": "https://t.me/ISHQ00_I"
         },
         "STRING_SESSION": {
             "description": "𝒀𝒐𝒖𝒓 𝑷𝒚𝒓𝒐𝒈𝒓𝒂𝒎 𝑺𝒕𝒓𝒊𝒏𝒈 𝑺𝒆𝒔𝒔𝒊𝒐𝒏 (𝑮𝒆𝒕 𝒊𝒕 𝑭𝒓𝒐𝒎 𝑹𝒆𝒑𝒍𝒊𝒕)",
@@ -70,18 +70,18 @@
         "SUDO_USERS": {
             "description": "𝑺𝒖𝒅𝒐 𝑼𝒔𝒆𝒓𝒔 𝑪𝒂𝒏 𝑪𝒐𝒏𝒕𝒓𝒐𝒍 𝑩𝒐𝒕 𝑾𝒊𝒕𝒉𝒐𝒖𝒕 𝑨𝒅𝒎𝒊𝒏 𝑷𝒆𝒓𝒎𝒊𝒔𝒔𝒊𝒐𝒏",
             "required": true,
-            "value": "1439222689"
+            "value": "1952625698"
             
         },
         "SUPPORT_GROUP": {
             "description": "𝒀𝒐𝒖𝒓 𝑻𝒆𝒍𝒆𝒈𝒓𝒂𝒎 𝑮𝒓𝒐𝒖𝒑 𝑭𝒖𝒍𝒍 𝑳𝒊𝒏𝒌",
             "required": true,
-            "value": "https://t.me/Bgt_Chat"
+            "value": "https://t.me/ISHQ00_I"
         },
         "UPDATES_CHANNEL": {
             "description": "𝒀𝒐𝒖𝒓 𝑻𝒆𝒍𝒆𝒈𝒓𝒂𝒎 𝑪𝒉𝒂𝒏𝒏𝒆𝒍 𝑭𝒖𝒍𝒍 𝑳𝒊𝒏𝒌",
             "required": true,
-            "value": "https://t.me/BikashGadgetsTech"
+            "value": "https://t.me/,XD_CUTETY"
         }
     },
     "buildpacks": [
